test/langtools/tools/javac/T8314423.out
T8314423.java:16:24: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.unnamed.variables), 21, 22
1 error
